# ArgoAgent

./: README.md  pyproject.toml
argoagent/: __init__.py  api.py  cli.py  file_handlers.py  models.py  system_prompts.py  tasks.py
argoagent/system_prompts/: code_review.md  debug.md  doc.md  edit.md  html.md  latex.md  linux_help.md  linux_quick.md  markdown.md  performance.md  python.md  security.md  short.md  testing.md  text_summary.md
argoagent/tasks/: code_review.yaml  debug.yaml  document_summary.yaml  documentation.yaml  edit.yaml  html.yaml  latex.yaml  linux.yaml  linux_command.yaml  linux_quick_command.yaml  python.yaml  summary.yaml
interactions/: yghadar_gemini25pro_20260121_143737.json  yghadar_gpt4olatest_20250902_170417.json  yghadar_gpt4olatest_20260115_144612.json  yghadar_gpt4olatest_20260115_144656.json  yghadar_gpt4olatest_20260115_145040.json
